esp12e motor shield

--- a/platform-io/platformio.ini
+++ b/platform-io/platformio.ini
@@ -37,7 +37,7 @@ lib_deps =
 build_flags =
     ${env.build_flags}
     -DSUPPORT_ETHERNET
-    -DL293D_DC_MOTOR_SHIELD
+    -DESP12E_DC_MOTOR_SHIELD
     -DMG90S_SERVO_MOTOR
 platform = espressif8266
 board = d1_mini
@@ -46,4 +46,4 @@ lib_deps =
     ottowinter/ESPAsyncTCP-esphome@^1.2.3
     me-no-dev/ESPAsyncUDP
     ottowinter/AsyncMqttClient-esphome@^0.8.5
-    zeromq-esp8266
+    network
